fix: Change invoice details